# clicky-win

.omo/drafts/: clickywin-local-ai-models.md
.omo/run-continuation/: ses_15259d6c8ffeKp9qnMInKjkq8k.json
clicky-py/: SETUP.md  config.example.toml  pyproject.toml
clicky-py/clicky/: app.py  companion_manager.py  config.py  design_system.py  hotkey.py  hotkey_global.py  hotkey_ptt.py  point_mapper.py  prompts.py  screen_capture.py  shake_detector.py  step_parser.py  tasks_store.py  uia_snap.py
clicky-py/clicky/clients/: brain_gemini.py  brain_ollama.py  ears_faster_whisper.py  factory.py  mouth_kokoro.py  tts_null.py
clicky-py/clicky/commands/: effects_command.py  router.py  swarm_command.py  tasks_command.py
clicky-py/clicky/effects/: __init__.py  particles.py  scan_layout.py
clicky-py/clicky/ui/: annotation_overlay_widget.py  arrow_overlay_widget.py  celebration_widget.py  clipboard_ring_widget.py  comet_trail_widget.py  companion_widget.py  drag_box_widget.py  focus_overlay_widget.py  heatmap_overlay_widget.py  history_window.py  log_handler.py  neon_scan_widget.py  output_widget.py  power_mode_widget.py  region_overlay_widget.py  settings_window.py  swarm_overlay_widget.py  tasks_window.py  text_input_widget.py  tray_icon.py  win32_transparency.py
clicky-py/tests/: test_brain_ollama.py  test_config.py  test_config_effects.py  test_effect_overlays.py  test_effects_particles.py  test_point_mapper.py  test_scan_layout.py
