[project]
name = "clicky"
version = "0.1.0"
description = "ClickyWin — voice tutor for Windows learners. Python port of Farza's Clicky."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyside6>=6.7",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "mss>=9.0",
    "pynput>=1.7.6",
    "httpx>=0.27",
    "websockets>=12.0",
    "pillow>=10.0",
    "platformdirs>=4.0",
    "qasync>=0.27",
    "pycaw>=20251023",
    "comtypes>=1.4.16",
    # Local AI providers (installed by default; safe to remove if using cloud-only)
    "faster-whisper>=1.1",
    "kokoro>=0.9.2",
    "tomli-w>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyinstaller>=6.0",
]

[project.scripts]
clicky = "clicky.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"clicky/prompts.py" = ["E501"]  # prompt strings are naturally long

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clicky"]
